🎈🚦 Checkpoint ./index.html:33818363/1105 ./project.html:33818363/982

--- a/index.html
+++ b/index.html
@@ -34,12 +34,16 @@
   <body>
 
 <header>
+  <h1>
+    Place holder
+  </h1>
   <nav>
+
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li><a href="#">Home</a></li>
+      <li><a href= "project.html">Browse Items</a></li>
+      <li><a href= "contact.html">Contact</a></li>
+      <li><a href= "aboutme.html">About</a></li>
     </ul>
   </nav>
 
