--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 
     <title>Place holder</title>
   </head>
-  <body>
+  <body class= "contact-page">
     <h1 class="contact-page">
       -Contact Me-
     </h1>
@@ -51,9 +51,11 @@
 
     <hr />
     <h1 class="contact-page">-Socials-</h1>
-    <a href="" target="_blank"><img class="contact-page" src="" alt=""/></a>
-    <a href="" target="_blank"><img class="contact-page" src="" alt=""/></a>
-    <a href="" target="_blank"><img class="contact-page" src="" alt=""/></a>
-    <a href="" target="_blank"><img class="contact-page" src="" alt=""/></a>
+    <a href="https://www.instagram.com/" target="_blank"><img class="contact-page" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fcac0b7b2-5e79-420c-93f2-0663c24b8651.image.png?v=1628291859861" alt="Instagram Icon"/></a>
+    <a href="https://twitter.com/" target="_blank"><img class="contact-page" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fcfcb5904-fe64-4a70-9836-4bf8c1ea4846.image.png?v=1628291879411" alt="Twitter Icon"/></a>
+    <a href="https://www.facebook.com/" target="_blank"><img class="contact-page" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F73a0fd06-94cc-4a74-82b2-75958636377d.image.png?v=1628291829056" alt="Facebook Icon"/></a>
+    <a href="https://www.youtube.com/" target="_blank"><img class="contact-page" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F2b3083fd-54b2-4705-a2d6-4764d4435a48.image.png?v=1628291905742" alt="Youtube Icon"/></a>
+    <a href="https://discordapp.com/" target="_blank"><img class="contact-page" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F74622a90-d632-4e12-92cc-4f17749cfaa4.image.png?v=1628292418075" alt="Discord Icon"/></a>
+    <a href="https://www.tiktok.com/" target="_blank"><img class="contact-page" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fb84e8526-89c4-404e-846c-db1801e2b417.image.png?v=1628292604456" alt="Tiktok Icon"/></a>
   </body>
 </html>
