📻⛴ Checkpoint ./index.html:33818363/124 ./style.css:33818363/17

--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
 
 <header class= "nav-links">
   <h1>
-    Place holder
+    Gaming X Hub
   </h1>
   <nav>
 
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href= "project.html">Browse Items</a></li>
-      <li><a href= "contact.html">Contact</a></li>
-      <li><a href= "aboutme.html">About</a></li>
+    <ul class= "navbar">
+      <li class= "nav"><a href="#">Home</a></li>
+      <li class= "nav"><a href= "project.html">Browse Items</a></li>
+      <li class= "nav"><a href= "contact.html">Contact</a></li>
+      <li class= "nav"><a href= "aboutme.html">About</a></li>
     </ul>
   </nav>
 </header>
