👴💸 Checkpoint ./style.css:33818363/388 ./index.html:33818363/461 ./.glitch-assets:33818363/467

--- a/index.html
+++ b/index.html
@@ -23,22 +23,23 @@
     <!--website-->
         <link
       rel="icon"
-      href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fdynamic-circle-black.png?v=1628230279833"
+      href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F8609790e-be57-40d7-b0b4-53afa426621d.image.png?v=1628295234786"
+  
     />
      <!-- external css-->
     <link rel="stylesheet" type="text/css" href= "style.css">
     
     
-    <title>Place holder</title>
+    <title>Gaming X Hub</title>
   </head>
   <body>
 
 <header class= "nav-links">
+
+  <nav>
   <h1>
     Gaming X Hub
   </h1>
-  <nav>
-
     <ul class= "navbar">
       <li class= "nav"><a href="#">Home</a></li>
       <li class= "nav"><a href= "project.html">Browse Items</a></li>
