🍅🏫 Checkpoint ./style.css:33818363/656 ./index.html:33818363/374 ./.glitch-assets:33818363/478

--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
 <header class= "nav-links">
 
   <nav>
-  <h1 class= "nav">
-    Gaming X Hub
-  </h1>
+<img class="nav" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F1c4e8253-6499-4c5f-8dea-a1cce2aaf021.image.png?v=1628301183148"></img>
     <ul class= "navbar">
       <li class= "nav"><a href="#">Home</a></li>
       <li class= "nav"><a href= "project.html">Browse Items</a></li>
