😬🙏 Checkpoint ./contact.html:33818363/8141 ./style.css:33818363/331 ./index.html:33818363/6

--- a/contact.html
+++ b/contact.html
@@ -39,24 +39,69 @@
 
     <title>Place holder</title>
   </head>
-  <body class= "contact-page">
-    
-    <h1 class="contact-page">
-      -Contact Me-
-    </h1>
-    <p class="info">
-      <a class="info" href="message.html">Message us</a>
-      <a class="info" href="tel:1-917-535-1747">Call us</a>
-      <a class="info" href="mailto:almasurantor@gmail.com">Email us</a>
-    </p>
+  <body class="contact-page">
+    <header class="nav-links">
+      <nav>
+        <img
+          class="nav"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F29efdb09-4cef-41c7-a379-d964ceae44c0.image.png?v=1628302948739"
+        />
+        <ul class="navbar">
+          <li class="nav"><a href="#">Home</a></li>
+          <li class="nav"><a href="project.html">Browse</a></li>
+          <li class="nav"><a href="contact.html">Contact</a></li>
+          <li class="nav"><a href="aboutme.html">About</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1 class="contact-page">
+        -Contact Me-
+      </h1>
+      <p class="info">
+        <a class="info" href="message.html">Message us</a>
+        <a class="info" href="tel:1-917-535-1747">Call us</a>
+        <a class="info" href="mailto:almasurantor@gmail.com">Email us</a>
+      </p>
 
-    <hr />
-    <h1 class="contact-page">-Socials-</h1>
-    <a href="https://www.instagram.com/" target="_blank"><img class="contact-page" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fcac0b7b2-5e79-420c-93f2-0663c24b8651.image.png?v=1628291859861" alt="Instagram Icon"/></a>
-    <a href="https://twitter.com/" target="_blank"><img class="contact-page" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fcfcb5904-fe64-4a70-9836-4bf8c1ea4846.image.png?v=1628291879411" alt="Twitter Icon"/></a>
-    <a href="https://www.facebook.com/" target="_blank"><img class="contact-page" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F73a0fd06-94cc-4a74-82b2-75958636377d.image.png?v=1628291829056" alt="Facebook Icon"/></a>
-    <a href="https://www.youtube.com/" target="_blank"><img class="contact-page" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F2b3083fd-54b2-4705-a2d6-4764d4435a48.image.png?v=1628291905742" alt="Youtube Icon"/></a>
-    <a href="https://discordapp.com/" target="_blank"><img class="contact-page" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F74622a90-d632-4e12-92cc-4f17749cfaa4.image.png?v=1628292418075" alt="Discord Icon"/></a>
-    <a href="https://www.tiktok.com/" target="_blank"><img class="contact-page" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fb84e8526-89c4-404e-846c-db1801e2b417.image.png?v=1628292604456" alt="Tiktok Icon"/></a>
+      <hr />
+      <h1 class="contact-page">-Socials-</h1>
+      <a href="https://www.instagram.com/" target="_blank"
+        ><img
+          class="contact-page"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fcac0b7b2-5e79-420c-93f2-0663c24b8651.image.png?v=1628291859861"
+          alt="Instagram Icon"
+      /></a>
+      <a href="https://twitter.com/" target="_blank"
+        ><img
+          class="contact-page"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fcfcb5904-fe64-4a70-9836-4bf8c1ea4846.image.png?v=1628291879411"
+          alt="Twitter Icon"
+      /></a>
+      <a href="https://www.facebook.com/" target="_blank"
+        ><img
+          class="contact-page"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F73a0fd06-94cc-4a74-82b2-75958636377d.image.png?v=1628291829056"
+          alt="Facebook Icon"
+      /></a>
+      <a href="https://www.youtube.com/" target="_blank"
+        ><img
+          class="contact-page"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F2b3083fd-54b2-4705-a2d6-4764d4435a48.image.png?v=1628291905742"
+          alt="Youtube Icon"
+      /></a>
+      <a href="https://discordapp.com/" target="_blank"
+        ><img
+          class="contact-page"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F74622a90-d632-4e12-92cc-4f17749cfaa4.image.png?v=1628292418075"
+          alt="Discord Icon"
+      /></a>
+      <a href="https://www.tiktok.com/" target="_blank"
+        ><img
+          class="contact-page"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fb84e8526-89c4-404e-846c-db1801e2b417.image.png?v=1628292604456"
+          alt="Tiktok Icon"
+      /></a>
+    </main>
   </body>
 </html>
