--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         />
         <ul class="navbar">
           <li class="nav"><a href="#">Home</a></li>
-          <li class="nav"><a href="project.html">Browse Items</a></li>
+          <li class="nav"><a href="project.html">Browse</a></li>
           <li class="nav"><a href="contact.html">Contact</a></li>
           <li class="nav"><a href="aboutme.html">About</a></li>
         </ul>
