🔮✈️ Checkpoint ./message.html:33818363/103 ./style.css:33818363/233 ./index.html:33818363/3783 ./html-index.html:33818363/6590 ./main.html:33818363/16

--- a/message.html
+++ b/message.html
@@ -35,14 +35,14 @@
 <div class="message">
   <form action="action_page.php">
 
-    <label for="fname">First Name</label>
+    <label class="message" for="fname">First Name</label>
     <input type="text" id="fname" name="firstname" placeholder="Your name..">
     <br>
 
-    <label for="lname">Last Name</label>
+    <label class= "message" for="lname">Last Name</label>
     <input type="text" id="lname" name="lastname" placeholder="Your last name..">
     <br>
-    <label for="Message Type">Message Type:</label>
+    <label class= "message" for="Message Type">Message Type:</label>
     <select id="message type" name="message type">
       <option value="Concern">Concern</option>
       <option value="Question">Question</option>
@@ -50,7 +50,7 @@
       <option value="Other">Other</option>
     </select>
 <br>
-    <label for="subject">Subject</label>
+    <label class= "message" for="subject">Subject</label>
     <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
     <input type="submit" value="Submit">
