📒🚅 Checkpoint ./index.html:33818363/9 ./contact.html:33818363/2834 ./style.css:33818363/27 ./.glitch-assets:33818363/3196 ./project.html:33818363/226

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
     <!--website-->
     <link
       rel="icon"
-      href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fdynamic-circle-black.png?v=1628230279833"
+      href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F8609790e-be57-40d7-b0b4-53afa426621d.image.png?v=1628295234786"
     />
     <!-- external css-->
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -40,19 +40,20 @@
     <title>Place holder</title>
   </head>
   <body class="contact-page">
-    <header class="nav-links">
+        <header class="nav-links">
       <nav>
         <img
           class="nav"
           src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F29efdb09-4cef-41c7-a379-d964ceae44c0.image.png?v=1628302948739"
         />
         <ul class="navbar">
-          <li class="nav"><a href="#">Home</a></li>
+          <li class="nav"><a href="index.html">Home</a></li>
           <li class="nav"><a href="project.html">Browse</a></li>
           <li class="nav"><a href="contact.html">Contact</a></li>
           <li class="nav"><a href="aboutme.html">About</a></li>
         </ul>
       </nav>
+      <hr>
     </header>
     <main>
       <h1 class="contact-page">
@@ -69,31 +70,31 @@
       <a href="https://www.instagram.com/" target="_blank"
         ><img
           class="contact-page"
-          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fcac0b7b2-5e79-420c-93f2-0663c24b8651.image.png?v=1628291859861"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F9871e72c-d14f-4628-9b27-76015c510fe6.image.png?v=1628306017889"
           alt="Instagram Icon"
       /></a>
       <a href="https://twitter.com/" target="_blank"
         ><img
           class="contact-page"
-          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fcfcb5904-fe64-4a70-9836-4bf8c1ea4846.image.png?v=1628291879411"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F7e91c307-3894-4d58-9f13-0e3557db350a.image.png?v=1628306221742"
           alt="Twitter Icon"
       /></a>
       <a href="https://www.facebook.com/" target="_blank"
         ><img
           class="contact-page"
-          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F73a0fd06-94cc-4a74-82b2-75958636377d.image.png?v=1628291829056"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fdd24e27d-9ef8-4f39-a10a-f818c00b0516.image.png?v=1628306172155"
           alt="Facebook Icon"
       /></a>
       <a href="https://www.youtube.com/" target="_blank"
         ><img
           class="contact-page"
-          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F2b3083fd-54b2-4705-a2d6-4764d4435a48.image.png?v=1628291905742"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F613f0241-e536-4310-a342-187e7730e36c.image.png?v=1628306257541"
           alt="Youtube Icon"
       /></a>
       <a href="https://discordapp.com/" target="_blank"
         ><img
           class="contact-page"
-          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F74622a90-d632-4e12-92cc-4f17749cfaa4.image.png?v=1628292418075"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fd9ba7164-96a0-4118-b7aa-06368233013c.image.png?v=1628305935169"
           alt="Discord Icon"
       /></a>
       <a href="https://www.tiktok.com/" target="_blank"
