--- a/html-index.html
+++ b/html-index.html
@@ -47,7 +47,7 @@
           src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F29efdb09-4cef-41c7-a379-d964ceae44c0.image.png?v=1628302948739"
         />
         <ul class="navbar">
-          <li class="nav"><a href="main.html">Home</a></li>
+          <li class="nav"><a href="index.html">Home</a></li>
           <li class="nav"><a href="project.html">Browse</a></li>
           <li class="nav"><a href="contact.html">Contact</a></li>
           <li class="nav"><a href="aboutme.html">About</a></li>
