--- a/project.html
+++ b/project.html
@@ -23,7 +23,7 @@
     <!--website-->
         <link
       rel="icon"
-      href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fdynamic-circle-black.png?v=1628230279833"
+      href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F8609790e-be57-40d7-b0b4-53afa426621d.image.png?v=1628295234786"
     />
      <!-- external css-->
     <link rel="stylesheet" type="text/css" href= "style.css">
