⏰🍘 Checkpoint ./contact.html:33818363/8010 ./style.css:33818363/478 ./index.html:33818363/10

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
     <title>Place holder</title>
   </head>
   <body class="contact-page">
-        <header class="nav-links">
+    <header class="nav-links">
       <nav>
         <img
           class="nav"
@@ -53,19 +53,20 @@
           <li class="nav"><a href="aboutme.html">About</a></li>
         </ul>
       </nav>
-      <hr>
+      <hr />
     </header>
     <main>
       <h1 class="contact-page">
         -Contact Me-
       </h1>
+  
       <p class="info">
         <a class="info" href="message.html">Message us</a>
         <a class="info" href="tel:1-917-535-1747">Call us</a>
         <a class="info" href="mailto:almasurantor@gmail.com">Email us</a>
       </p>
 
-      <hr />
+      <br />
       <h1 class="contact-page">-Socials-</h1>
       <a href="https://www.instagram.com/" target="_blank"
         ><img
@@ -85,7 +86,8 @@
           src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fdd24e27d-9ef8-4f39-a10a-f818c00b0516.image.png?v=1628306172155"
           alt="Facebook Icon"
       /></a>
-      <a href="https://www.youtube.com/" target="_blank"
+      <br />
+      <a href="https://www.youtube.com/" target="_blank" class="youtube"
         ><img
           class="contact-page"
           src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F613f0241-e536-4310-a342-187e7730e36c.image.png?v=1628306257541"
