🎆🏠 Checkpoint ./contact.html:33818363/18420 ./message.html:33818363/2438 ./aboutme.html:33818363/8445 ./index.html:33818363/3697 ./style.css:33818363/46 ./.glitch-assets:33818363/467

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     <!-- external css-->
     <link rel="stylesheet" type="text/css" href="style.css" />
 
-    <title>Place holder</title>
+    <title>Gaming X Hub</title>
   </head>
   <body class="contact-page">
     <header class="nav-links">
@@ -59,7 +59,7 @@
       <h1 class="contact-page">
         -Contact Me-
       </h1>
-  
+
       <p class="info">
         <a class="info" href="message.html">Message us</a>
         <a class="info" href="tel:1-917-535-1747">Call us</a>
