🚿🏪 Checkpoint ./project.html:33818363/1318 ./contact.html:33818363/361 ./.glitch-assets:33818363/484

--- a/project.html
+++ b/project.html
@@ -32,6 +32,37 @@
     <title>Place holder</title>
   </head>
   <body>
+  
+  <center>
+    <img
+          class="contact-page"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F9871e72c-d14f-4628-9b27-76015c510fe6.image.png?v=1628306017889"
+          alt="Instagram Icon"
+         >item buy one</img>
+    </center>
+    <h3>
+      item buy one 
+    </h3>
+    <img
+          class="contact-page"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F9871e72c-d14f-4628-9b27-76015c510fe6.image.png?v=1628306017889"
+          alt="Instagram Icon"
+      />
+    <img
+          class="contact-page"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F9871e72c-d14f-4628-9b27-76015c510fe6.image.png?v=1628306017889"
+          alt="Instagram Icon"
+      />
+    <img
+          class="contact-page"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F9871e72c-d14f-4628-9b27-76015c510fe6.image.png?v=1628306017889"
+          alt="Instagram Icon"
+      />
+    <img
+          class="contact-page"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F9871e72c-d14f-4628-9b27-76015c510fe6.image.png?v=1628306017889"
+          alt="Instagram Icon"
+      />
 
     
     
