👙🛍 Checkpoint ./project.html:33818363/563 ./aboutme.html:33818363/100

--- a/aboutme.html
+++ b/aboutme.html
@@ -56,8 +56,10 @@
     </header>
     <main>
 
-<img src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fc7d6495f-c2b9-4eee-8a46-2e2da94ea81d.image.png?v=1628308208007"> Ceo of Gamer X Hub</img>
-  
+<p>
+hello it's me
+<img src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fc7d6495f-c2b9-4eee-8a46-2e2da94ea81d.image.png?v=1628308208007"/> hello it's me
+        </p>
 <h2>
   Almasur Antor
       </h2>
