--- a/project.html
+++ b/project.html
@@ -32,6 +32,20 @@
     <title>Place holder</title>
   </head>
   <body>
+    <header class="nav-links">
+      <nav>
+        <img
+          class="nav"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F051f1c66-729c-41b2-89a6-355c71ecd4a7.image.png?v=1628308587913"
+        />
+        <ul class="navbar">
+          <li class="nav"><a href="index.html">Home</a></li>
+          <li class="nav"><a href="project.html">Browse</a></li>
+          <li class="nav"><a href="contact.html">Contact</a></li>
+          <li class="nav"><a href="aboutme.html">About</a></li>
+        </ul>
+      </nav>
+    </header>
   
   <center>
     <img
