🕍✂️ Checkpoint ./index.html:33818363/5 ./contact.html:33818363/3656 ./aboutme.html:33818363/3646

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- external css-->
     <link rel="stylesheet" type="text/css" href="style.css" />
 
-    <title>Gaming X Hub</title>
+    <title>Gamer X Hub</title>
   </head>
   <body>
     <header class="nav-links">
