--- a/contact.html
+++ b/contact.html
@@ -37,14 +37,14 @@
     <!-- external css-->
     <link rel="stylesheet" type="text/css" href="style.css" />
 
-    <title>Gaming X Hub</title>
+    <title>Gamer X Hub</title>
   </head>
-  <body class="contact-page">
+  <body>
     <header class="nav-links">
       <nav>
         <img
           class="nav"
-          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F29efdb09-4cef-41c7-a379-d964ceae44c0.image.png?v=1628302948739"
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F051f1c66-729c-41b2-89a6-355c71ecd4a7.image.png?v=1628308587913"
         />
         <ul class="navbar">
           <li class="nav"><a href="index.html">Home</a></li>
@@ -53,7 +53,7 @@
           <li class="nav"><a href="aboutme.html">About</a></li>
         </ul>
       </nav>
-      <hr />
+
     </header>
     <main>
       <h1 class="contact-page">
