👵⚾️ Checkpoint ./style.css:33818363/331 ./contact.html:33818363/27

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 
     <title>Gamer X Hub</title>
   </head>
-  <body>
+  <body class="contact-page">
     <header class="nav-links">
       <nav>
         <img
