🚡🌗 Checkpoint ./style.css:33818363/4252 ./contact.html:33818363/8720

--- a/contact.html
+++ b/contact.html
@@ -36,10 +36,16 @@
     />
     <!-- external css-->
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abel&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Gamer X Hub</title>
   </head>
-  <body class="contact-page">
+  <body>
     <header class="nav-links">
       <nav>
         <img
@@ -53,9 +59,8 @@
           <li class="nav"><a href="aboutme.html">About</a></li>
         </ul>
       </nav>
-
     </header>
-    <main>
+    <main class="contactpage">
       <h1 class="contact-page">
         -Contact Me-
       </h1>
@@ -90,7 +95,7 @@
       <a href="https://www.youtube.com/" target="_blank" class="youtube"
         ><img
           class="contact-page"
-          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fa1eeae34-ed3e-44c0-aa38-cbb11cc53eb5.image.png?v=1628309740547" 
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fa1eeae34-ed3e-44c0-aa38-cbb11cc53eb5.image.png?v=1628309740547"
           alt="Youtube Icon"
       /></a>
       <a href="https://discordapp.com/" target="_blank"
