✊💪 Checkpoint ./contact.html:33818363/22 ./style.css:33818363/248

--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
     </header>
     <main class="contactpage">
       <h1 class="contact-page">
-        -Contact Me-
+        -Contact Us-
       </h1>
 
       <p class="info">
