💖🍅 Checkpoint ./style.css:33818363/451 ./aboutme.html:33818363/221 ./project.html:33818363/1220

--- a/aboutme.html
+++ b/aboutme.html
@@ -66,7 +66,8 @@
             About me
           </h2>
           <p class= "p1">
-            Hi! I’m Almasur Antor but you can call me Almas. Growing up I didn’t really have much access to video games or anything of that sort.  My parents always pushed me towards sports, don’t get me wrong, I love sports till this day. But once I was first introduced to the gaming world I was instantly obsessed. Games helped me get through a lot, gaming was a doorway to escape reality and helped me ease my mind from negativity and stress. My parents didn’t like me playing games though, in fact I never owned a proper console to play games. I used to play games on my laggy laptop but luckily for me, I was recently finally able to get a gaming pc.
+            Hi! I’m Almasur Antor but you can call me Almas. 
+            Growing up I didn’t really have much access to video games or anything of that sort.  My parents always pushed me towards sports, don’t get me wrong, I love sports till this day. But once I was first introduced to the gaming world I was instantly obsessed. Games helped me get through a lot, gaming was a doorway to escape reality and helped me ease my mind from negativity and stress. My parents didn’t like me playing games though, in fact I never owned a proper console to play games. I used to play games on my laggy laptop but luckily for me, I was recently finally able to get a gaming pc.
           </p>
         </div>
 
@@ -81,11 +82,7 @@
           </h2>
           <p class= "p2">
            Gamer X Hub is an online gaming store where we sell gaming products for cheap.
-            I built Gamer X Hub for all the kids who struggled to afford a gaming console like me. My goal is to mak
-            e gaming accessible to everyone, everyone deserves a place to relax and have fun. Gamer X Hub is my firs
-            t project but definitely not my last. Making an online gaming store isn’t my only goal. I’m still young, I l
-            ook forward to developing many more websites, platforms and apps. I’m experienced with coding, I know language
-            s such as HTML, CSS, and Python. I want to be a software developer, and there’s many steps ahead of me.
+            I built Gamer X Hub for all the kids who struggled to afford a gaming console like me. My goal is to make gaming accessible to everyone, everyone deserves a place to relax and have fun. Gamer X Hub is my first project but definitely not my last. Making an online gaming store isn’t my only goal. I’m still young, I look forward to developing many more websites, platforms and apps. I’m experienced with coding, I know languages such as HTML, CSS, and Python. I want to be a software developer, and there’s many steps ahead of me.
             
           </p>
         </div>
