🦃👓 Checkpoint ./style.css:33818363/73 ./.glitch-assets:33818363/526 ./project.html:33818363/12255

--- a/project.html
+++ b/project.html
@@ -57,8 +57,32 @@
 
     <div class="items">
       <div class="item-name">title</div>
+      <a
+        target="_blank"
+        href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
+      >
+        <img
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
+        />
+      </a>
+      <div class="desc">Add a description of the image here</div>
+    </div>
+    <div class="items">
+      <div class="item-name">title</div>
+      <a
+        target="_blank"
+        href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
+      >
+        <img
+          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
+        />
+      </a>
+      <div class="desc">Add a description of the image here</div>
+    </div>
+    <div class="items">
+      <div class="item-name">title</div>
       <a target="_blank" href="">
-        <img src="img_5terre.jpg" alt="" />
+        <img src="img_5terre.jpg" />
       </a>
       <div class="desc">Add a description of the image here</div>
     </div>
