👭🚿 Checkpoint ./project.html:33818363/61

--- a/project.html
+++ b/project.html
@@ -55,8 +55,8 @@
       </nav>
     </header>
 <h2>
-  Xbox
-    </h2>
+  Xbox                </h2> <h2> PlayStation </h2>
+  
     <div class="items">
       <div class="item-name">title</div>
       <a
