🍽🚧 Checkpoint ./project.html:33818363/7622 ./style.css:33818363/86

--- a/project.html
+++ b/project.html
@@ -54,39 +54,36 @@
         </ul>
       </nav>
     </header>
-<h2>
-  Xbox                </h2> <h2> PlayStation </h2>
-  
-    <div class="items">
-      <div class="item-name">title</div>
-      <a
-        target="_blank"
-        href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
-      >
-        <img
-          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
-        />
-      </a>
-      <div class="desc">Add a description of the image here</div>
-    </div>
-    <div class="items">
-      <div class="item-name">title</div>
-      <a
-        target="_blank"
-        href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
-      >
-        <img
-          src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
-        />
-      </a>
-      <div class="desc">Add a description of the image here</div>
-    </div>
-    <div class="items">
-      <div class="item-name">title</div>
+
+
+    <!-- Playstation-->
+
+    <div class="playstation">
+      <div class="ps-name">title</div>
       <a target="_blank" href="">
-        <img src="img_5terre.jpg" />
+        <img src="" />
       </a>
-      <div class="desc">Add a description of the image here</div>
+      <div class="psdesc">Add a description of the image here</div>
     </div>
+    <div class="playstation">
+      <div class="ps-name">title</div>
+      <a target="_blank" href="">
+        <img src="" />
+      </a>
+      <div class="psdesc">Add a description of the image here</div>
+    </div>
+
+    <!--Xbox-->
+        <div class="xbox">
+      <div class="ps-name">title</div>
+      <a target="_blank" href="">
+        <img src="" />
+      </a>
+      <div class="psdesc">Add a description of the image here</div>
+    </div>
+
+    <!--Video Games-->
+
+    <!--Other-->
   </body>
 </html>
