--- a/project.html
+++ b/project.html
@@ -60,10 +60,10 @@
 <!--Gaming PC-->
     <div class="pc">
       <div class="pc-name">title</div>
-      <a target="_blank" href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179">
-        <img src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179" />
+      <a target="_blank" href="">
+        <img src="" />
       </a>
-      <div class="pcesc">Add a description of the image here</div>
+      <div class="pcdesc">Add a description of the image here</div>
     </div>
     
     
