--- a/aboutme.html
+++ b/aboutme.html
@@ -39,7 +39,7 @@
 
     <title>Gamer X Hub</title>
   </head>
-  <body>
+  <body class= "aboutme">
     <header class="nav-links">
       <nav>
         <img
