--- a/aboutme.html
+++ b/aboutme.html
@@ -113,7 +113,9 @@
 
 			<div class="footer-left">
 
-				<h3>Company<span>logo</span></h3>
+				<p class="footer-company-name">
+          Gamer X Hub
+        </p>
 
 				<p class="footer-links">
 					<a href="#" class="link-1">Home</a>
@@ -129,7 +131,7 @@
 					<a href="#">Contact</a>
 				</p>
 
-				<p class="footer-company-name">Company Name © 2015</p>
+				<p class="footer-company-name">Gamer X Hub © 2020</p>
 			</div>
 
 			<div class="footer-center">
