🏓🐁 Checkpoint ./style.css:33818363/453 ./project.html:33818363/4433 ./index.html:33818363/20

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <title>Gamer X Hub</title>
   </head>
-  <body>
+  <body class="index">
     <header class="nav-links">
       <nav>
         <img
