🌹🐽 Checkpoint ./index.html:33818363/2216 ./style.css:33818363/100

--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
 
 				<div class="footer-icons">
 
-					<a href="#"><img class="facebook" /></a>
-					<a href="#"><img class="twitter" /></a>
-					<a href="#"><img class="instagram" /></a>
-					<a href="#"><img class="discord" /></a>
+					<a href="#"><img class="facebook" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F61794cd3-d786-4361-8885-7ba9fd6b31e6.image.png?v=1628398376122" style= "width:40x; height:40px;"></a>
+          <a href="#"><img class="facebook" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F61794cd3-d786-4361-8885-7ba9fd6b31e6.image.png?v=1628398376122" style= "width:40x; height:40px;"></a>
+          <a href="#"><img class="facebook" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F61794cd3-d786-4361-8885-7ba9fd6b31e6.image.png?v=1628398376122" style= "width:40x; height:40px;"></a>
+          <a href="#"><img class="facebook" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F61794cd3-d786-4361-8885-7ba9fd6b31e6.image.png?v=1628398376122" style= "width:40x; height:40px;"></a>
 
 				</div>
 
