🔔🖼 Checkpoint ./index.html:33818363/618 ./style.css:33818363/21 ./.glitch-assets:33818363/967

--- a/index.html
+++ b/index.html
@@ -91,12 +91,14 @@
 			<div class="footer-center">
 
 				<div>
-					<img class="map" />
+					<img class="map" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fbed1c4bb-bcdc-43e4-80d7-21fc8c200b49.image.png?v=1628519237205" width=
+"20px" height="20px"/>
 					<p><span>444 S. Cedros Ave</span> Solana Beach, California</p>
 				</div>
 
 				<div>
-					<img class="call" />
+					<img class="call" src=
+"https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F10e0f98c-58b1-40e6-a53b-c5ba08037ca8.image.png?v=1628519452230" width="20px" height="20px"/>
 					<p>+1.555.555.5555</p>
 				</div>
 
