📯🎲 Checkpoint ./.glitch-assets:33818363/963 ./index.html:33818363/1172 ./README.md:33818363/459

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				</div>
 
 				<div>
-					<img class="email" />
+					<img class="email" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F761817f4-d2a9-4d9d-8470-d12b7d5c99c5.image.png?v=1628519610597" width= "20px" height="20px"/>
 					<p><a href="mailto:support@company.com">support@company.com</a></p>
 				</div>
 
