🕋⛵️ Checkpoint ./.glitch-assets:33818363/481 ./index.html:33818363/770 ./contact.html:33818363/25 ./style.css:33818363/34

--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
       <p class="info">
         <a class="info" href="message.html">Message us</a>
         <a class="info" href="tel:1-917-535-1747">Call us</a>
-        <a class="info" href="mailto:almasurantor@gmail.com">Email us</a>
+        <a class="info" href="mailto:gamerxhub@gmail.com">Email us</a>
       </p>
 
       <br />
