--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<div class="footer-left">
 
 			<p class="footer-company-name">
-          Gamer X Hub
+          <img class="footer-company-name" src= "https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F051f1c66-729c-41b2-89a6-355c71ecd4a7.image.png?v=1628308587913" width= "60px" height= "40px">
         </p>
 
 				<p class="footer-links">
@@ -92,19 +92,19 @@
 
 				<div>
 					<img class="map" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fbed1c4bb-bcdc-43e4-80d7-21fc8c200b49.image.png?v=1628519237205" width=
-"20px" height="20px"/>
-					<p><span>444 S. Cedros Ave</span> Solana Beach, California</p>
+"20px" height="25px"/>
+					<p>53-54 Cloudy Ave<br> NY Queens 10523</p>
 				</div>
-
+<br>
 				<div>
 					<img class="call" src=
 "https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F10e0f98c-58b1-40e6-a53b-c5ba08037ca8.image.png?v=1628519452230" width="20px" height="20px"/>
-					<p>+1.555.555.5555</p>
+					<p>917-535-1747</p>
 				</div>
-
+<br>
 				<div>
-					<img class="email" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F761817f4-d2a9-4d9d-8470-d12b7d5c99c5.image.png?v=1628519610597" width= "20px" height="20px"/>
-					<p><a href="mailto:support@company.com">support@company.com</a></p>
+					<img class="email" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Feae3df06-a66e-4a40-bd3b-591e58d1aef7.image.png?v=1628522618897" width= "20px" height="20px"/>
+					<p>gamerxhub@gmail.com</p>
 				</div>
 
 			</div>
