🌇🎆 Checkpoint ./index.html:33818363/417

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<a href="aboutme.html">About |</a>
 					
 					
-					<a href="#">Contact</a>
+					<a href="contact.html">Contact</a>
 				</p>
 
 				<p class="footer-company-name">Gamer X Hub © 2020</p>
@@ -112,9 +112,9 @@
 			<div class="footer-right">
 
 				<p class="footer-company-about">
-					<span>About the company</span><br>
+					<span>About the company</span>
 					<h6>
-            Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
+            Gamer X Hub is a New York based online gaming store. We're here to make gaming for accesible for everyone by selling quality products for cheaper
         </h6>
 				</p>
 
