--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<div class="footer-left">
 
 			<p class="footer-company-name">
-          <img class="footer-company-name" src= "https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F051f1c66-729c-41b2-89a6-355c71ecd4a7.image.png?v=1628308587913" width= "300px" height= "70px">
+          <img class="footer-company-name" src= "https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F051f1c66-729c-41b2-89a6-355c71ecd4a7.image.png?v=1628308587913" width= "400px" height= "70px">
         </p>
 
 				<p class="footer-links">
@@ -114,7 +114,7 @@
 				<p class="footer-company-about">
 					<span>About the company</span>
 					<h6>
-            Gamer X Hub is a New York based online gaming store. We're here to make gaming for accesible for everyone by selling quality products for cheaper
+            Gamer X Hub is a New York based online gaming store. We're here to make gaming for accesible for everyone by selling quality products for cheap!
         </h6>
 				</p>
 
