--- a/project.html
+++ b/project.html
@@ -139,7 +139,7 @@
       <a target="_blank" href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185">
         <img src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Fe77fcbee-1cb8-4893-a02b-49876930ff3a.image.png?v=1628563175185" />
       </a>
-      <div class="pcdesc">A new playstation 5</div>
+      <div class="pcdesc">A new playstation 5A new playstation 5</div>
     </div>
     
     
