🎄📌 Checkpoint ./project.html:33818363/178 ./style.css:33818363/377

--- a/project.html
+++ b/project.html
@@ -222,7 +222,7 @@ Playstation Products
     </div>
 
 <br>  
-<hr width="100%" height= "20px" color= "dodgerblue" border= "solid">
+<hr width="100%" height= "300px" color= "dodgerblue" >
     
 
     <div class="container1">
