⚡️🚵 Checkpoint ./style.css:33818363/98 ./index.html:33818363/389 ./project.html:33818363/1997

--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
 				<div>
 					<img class="call" src=
 "https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F10e0f98c-58b1-40e6-a53b-c5ba08037ca8.image.png?v=1628519452230" width="20px" height="20px"/>
-					<p>917-535-1747</p>
+					<a href="tel:+1-352-536-8645">352-536-8645</a>
 				</div>
 <br>
 				<div>
 					<img class="email" src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2Feae3df06-a66e-4a40-bd3b-591e58d1aef7.image.png?v=1628522618897" width= "20px" height="20px"/>
-					<p>gamerxhub@gmail.com</p>
+					<a href="mailto:gamerxhub@gmail.com">gamerxhub@gmail.com</a>
 				</div>
 
 			</div>
