🌿🏏 Checkpoint ./style.css:33818363/1032 ./index.html:33818363/9

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div id="bs">
           <!-- Best Selling-->
           <h1>
-            Best Selling Products
+            Best Selling
           </h1>
           <div class="bs">
             <div class="bs-price">title</div>
