🎀🔖 Checkpoint ./style.css:33818363/290 ./index.html:33818363/1977

--- a/index.html
+++ b/index.html
@@ -56,6 +56,25 @@
     </header>
 
     <main>
+      <!--featured product-->
+              <h1 class="fs">
+          Featured product
+        </h1>
+      <div class="fs">
+
+            <div class="fs-price">title</div>
+            <a
+              target="_blank"
+              href="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
+            >
+              <img
+                src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F95ce80de-0ea2-4619-a23a-10c74ef6b7c9.image.png?v=1628412211179"
+              />
+            </a>
+            <div class="fsdesc">Add a description of the image here</div>
+      </div>
+        <hr>
+      <br>
       <div class="container1">
         <div id="bs">
           <!-- Best Selling-->
