🙅🐁 Checkpoint ./style.css:33818363/13687 ./index.html:33818363/12275 ./aboutme.html:33818363/17358 ./contact.html:33818363/9535 ./message.html:33818363/6467 ./project.html:33818363/38805

--- a/message.html
+++ b/message.html
@@ -39,6 +39,20 @@
 
     <title>Gaming X Hub</title>
   </head>
+  <header class="nav-links">
+    <nav>
+      <img
+        class="nav"
+        src="https://cdn.glitch.com/6c0e3a82-1739-4715-95cc-198bc07964d1%2F051f1c66-729c-41b2-89a6-355c71ecd4a7.image.png?v=1628308587913"
+      />
+      <ul class="navbar">
+        <li class="nav"><a href="index.html">Home</a></li>
+        <li class="nav"><a href="project.html">Browse</a></li>
+        <li class="nav"><a href="contact.html">Contact</a></li>
+        <li class="nav"><a href="aboutme.html">About</a></li>
+      </ul>
+    </nav>
+  </header>
   <body>
     <div class="message">
       <form action="action_page.php">
